# electric-field--simulation

./: .gitignore  CMakeLists.txt  README.md
assets/models/: brain_mask.ctm  coil_b090c.ctm  head.ctm
docs/: ONBOARDING.md  TECHNICAL.md  TESTING.md  UI_DESIGN_SYSTEM.md  VTK_ENVIRONMENT.md  公共组件编写规范.md  软件设计风格规范.md
qml/: HeaderBar.qml  StatusBar.qml  main.qml
qml/MagFont/: AppFont.qml  qmldir
qml/common/: FlatButton.qml  FlatCard.qml  FlatDivider.qml  FlatIconButton.qml  FlatModalScrim.qml  FlatSectionLabel.qml  FlatSliderRow.qml  FlatTextField.qml  FlatToggle.qml
qml/components/: CollapsiblePanel.qml  ColorBar.qml  ColorBarPanel.qml  LeftControlPanel.qml  MessageDialog.qml  SettingsDialog.qml
qml/overlays/: AppOverlay.qml
resources/: app.qrc  app.rc
scripts/: convert_efield.js  generate_icon.ps1  package.bat  package.ps1  run_tests.bat  run_tests.ps1
src/: AppController.cpp  AppController.h  AppTheme.h  ApplicationShell.cpp  ApplicationShell.h  FieldColorMap.cpp  FieldColorMap.h  FieldSimulator.cpp  FieldSimulator.h  HeadMaterial.cpp  HeadMaterial.h  ModelLoader.cpp  ModelLoader.h  VtkHost.cpp  VtkHost.h  VtkRenderWidget.cpp  VtkRenderWidget.h  main.cpp
tests/: CMakeLists.txt  test_apptcontroller.cpp  test_apptheme.cpp  test_fieldcolormap.cpp  test_fieldsimulator.cpp  test_modelloader.cpp
tests/helpers/: EfieldBinaryWriter.h  TestPaths.h  VtkTestHelpers.h
